<resources>
    <string name="app_name">电子保修卡直销员</string>
    <string name="app_name_2014">电子保修卡直销员 2014</string>
    <string name="app_id">541aafb6</string>
    <string name="button_register">新用户注册</string>
     <string name="button_find_password">找回密码</string>
    <string name="button_new_card">新建保修卡</string>
    <string name="button_edit_card">编辑保修卡</string>
    <string name="button_my_card">我的保修卡</string>
     <string name="button_webview_goback">回退</string>
    <string name="button_login">"登录"</string>
     <string name="menu_back">"返回"</string>
     <string name="button_close">关闭</string>
      <string name="button_save">保存</string>
      <string name="button_next">下一步</string>
       <string name="button_confirm">新建保修卡</string>
    <string name="msg_unsupport_operation">"该功能暂不支持"</string>
     <string name="msg_no_sdcard">"未检测到SD卡,无法使用相机"</string>
     <string name="dialog_msg_media_unmounted">无法访问外置存储卡,请检查....</string>
      <string name="text_sms">发短信</string>
     <string name="text_call">打电话</string>
      <string name="menu_picture_gallery">上传手机中的照片</string>
        <string name="menu_picture_camera">拍照上传</string>
        <string name="menu_bill_edit">拍摄发票</string>
       <string name="menu_bill_show">查看发票</string>
       <string name="menu_goods_preview">预览</string>
       <string name="menu_goods_capture">拍摄</string>
       <string name="title_scan_desc1">扫描海尔产品二维码</string>
       <string name="title_scan_desc2">获取产品信息</string>
       <string name="title_scan_button">开始扫描</string>
       <string name="title_my_product">我的家电</string>
       <string name="product_type">类型</string>
       <string name="product_brand">品牌</string>
       <string name="product_model">型号</string>
       <string name="product_sn">商品编号</string>
       <string name="product_baoxiu_date">保修期(年)</string>
       <string name="product_beizhu">备注标签</string>
       <string name="product_time">保修期</string>
       <string name="product_tel">保修电话</string>
       <string name="product_where">购买地点</string>
       <string name="product_bill">发票</string>
       <string name="product_buy_date">购买日期</string>
       <string name="product_buy_cost">购买价格</string>
       <string name="product_buy_entry">购买途径</string>
       <string name="product_buy_delay_time">延保时间</string>
       <string name="product_buy_delay_componey">延保单位</string>
       <string name="product_buy_delay_componey_tel">延保电话</string>
       <string name="product_baoxiu_date_tips">(请核实产品资料标注的保修期)</string>
       <string name="product_debug_placeholder">XXXXXXXX</string>
       <string name="product_bill_desc">请拍摄发票或收据，作为保修凭据</string>
    	<string name="title_more_message">更多信息</string>
    	<string name="button_qa">常见问题</string>
    	<string name="button_call_repair">拨打维修电话</string>
    	<string name="button_ask_online">在线咨询</string>
    	<string name="button_speek">点击说话</string>
       <string name="account_name">账号:</string>
       <string name="account_pwd">密码:</string>
       <string name="usr_name">用户名</string>
       <string name="usr_pwd">密码</string>
       <string name="usr_repwd">确认密码</string>
       <string name="usr_tel">手机号码</string>
       <string name="usr_validate">验证码</string>
       <string name="usr_name_hint">输入你的用户名</string>
       <string name="usr_pwd_hint">输入你的密码</string>
       <string name="usr_repwd_hint">请再次输入你的密码</string>
       <string name="usr_tel_hint">输入你的手机号</string>
       <string name="usr_title_hint">输入你的职务</string>
       <string name="usr_org_hint">输入你的所属店名</string>
       <string name="usr_workplace_hint">请输入地址</string>
    <string name="activity_title_choose_device_general">我的保修卡</string>
    <string name="activity_title_repair">预约维修</string>
    <string name="activity_title_install">预约安装</string>
    <string name="title_over_deadline">过保</string>
    <string name="title_login">星登录</string>
    <string name="title_new_user_register">新用户注册</string>
    <string name="product_deadline_placeholder">999天</string>
    <string name="menu_more">更多</string>
    <string name="menu_login">登录</string>
    <string name="menu_exit">退出</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_register">注册</string>
    <string name="menu_setting">设置</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about">关于</string>
    <string name="menu_search">搜索</string>
    <string name="menu_done">完成</string>
    <string name="menu_choose">选择</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_edit_for_delete">删除</string>
    <string name="menu_delete">删除</string>
	<string name="menu_create">新建</string>
	<string name="menu_save">保存</string>
    <string name="register_tips">小提示:输入手机号码，点击“获取验证码”后，系统会自动下发一条包含验证码的短信，手机在收到该短信后会将验证码提取出来并回填到验证码文本框</string>
    <string name="title_get_usr_validate">获取验证码</string>
    <string name="address">地址</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="name">姓名</string>
    <string name="button_register_confirm">确认注册</string>
    <string name="input_province_tips">请先选择省份</string>
    <string name="input_city_tips">请先选择城市</string>
    <string name="choose_address">选择地址</string>
    <string name="input_home_place_detail_tips">为方便为您提供便捷的安装维修服务，请您填写详细地址。</string>
    <string name="msg_progressdialog_wait">操作处理中，请稍后....</string>
    <string name="msg_input_usrtel_password">请输入你的手机号和密码</string>
    <string name="my_home">我的家</string>
    <string name="parent_home">父母家</string>
    <string name="parent_home2">岳父母家</string>
    <string name="address_pcs">省/市</string>
    <string name="button_confirm_ok">确认</string>
    <string name="people_info">联系人信息</string>
    <string name="yuyue_time">预约时间</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="error_des">故障描述</string>
    <string name="button_yuyue_repair">预约</string>
    <string name="start_speak">开始说话</string>
    <string name="end_speak">结束说话</string>
    <string name="speak_tips">当前正在说话，音量大小：</string>
    <string name="login_fail">登录失败</string>
    <string name="msg_default_status">请将二维码等放置于红框内扫描，注意手勿抖动，勿倾斜</string>
  <string name="msg_default_status_on">关灯</string>
  <string name="msg_default_status_off">开灯</string>
  <string name="msg_default_type">类型</string>
  <string name="msg_existing_barcode">不存在barcode图片，操作取消</string>
  <string name="msg_encode_barcode_failed">找不到条码。</string>
  <string name="msg_encode_contents_failed">不能从已有数据中读取条码。</string>
   <string name="msg_default_contents">内容</string>
  <string name="msg_default_format">格式</string>
  <string name="menu_history">历史</string>
  <string name="menu_input">输入名片码</string>
  <string name="button_google_shopper">谷歌购物</string>
  <string name="msg_share_explanation">你可以在你的手机屏幕上显示条码，并使用其他手机扫描此条码方式进行分享</string>
  <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
   <string name="button_ignore">返回扫描</string>
  <string name="button_share_by_sms">通过短信分享</string>
  <string name="button_share_clipboard">分享剪切板</string>
   <string name="button_share_by_email">通过email分享</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_haier_barcode">找到海尔识别码</string>
    <string name="result_baoxiucard_barcode">找到保修卡</string>
    <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_encode_in_progress">正在生成条码\u2026</string>
  <string name="msg_google_shopper_missing">谷歌购物未安装</string>
  <string name="msg_install_google_shopper">谷歌购物结合条码扫描价格，评论和不打开浏览器。您想尝试吗？</string>
  <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
  <string name="msg_local_intent_failed">抱歉，文件无法打开</string>
  <string name="button_ok">确定</string>
  <string name="button_cancel">取消</string>
  <string name="msg_not_our_results">你离开此应用程序。搜索结果，您会看到的都没有涉及这个应用程序</string>
  <string name="history_clear_one_history_text">删除</string>
  <string name="history_clear_text">删除历史</string>
  <string name="history_email_title">条码扫描器历史</string>
  <string name="history_empty">空的</string>
  <string name="history_empty_detail">没有条码扫描已记录</string>
  <string name="history_send">发送历史</string>
  <string name="history_title">历史</string>
   <string name="msg_sure">你肯定吗？</string>
   <string name="msg_save_ok">保存成功</string>
   <string name="msg_sd_unavailable">SD无法访问...</string>
    <string name="msg_camera_framework_bug">出错咯，机器人相机出现问题。您可能需要重新启动设备。</string>
  <string name="msg_login_confirm_success">登录成功，现在可以开始使用本软件了</string>
  <string name="msg_login_save_success">账户初始化失败，请再次尝试...</string>
  <string name="msg_login_dialog_title_wait">正在登录...</string>
   <string name="msg_update_dialog_title_wait">正在更新...</string>
  <string name="msg_login_download_accountinfo_wait">正在载入账户信息....</string>
  <string name="msg_login_download_addressinfo_wait">正在载入家信息....</string>
  <string name="msg_login_download_baoxiuinfo_wait">正在载入保修卡信息....</string>
  <string name="msg_op_canceled">操作取消</string>
  <string name="msg_op_successed">操作成功</string>
   <string name="msg_op_failed">操作失败</string>
  <string name="button_re_vali">重新验证</string>
  <string name="second">倒计时%1$s秒</string>
    <string name="msg_input_usrtel">请输入你的手机号码</string>
    <string name="msg_input_usrtel_invalid">请输入有效的11位手机号码</string>
    <string name="msg_input_yanzheng_code">请输入验证码</string>
    <string name="msg_input_yanzheng_code_check_net">获取验证码失败，请检查你的网络连接</string>
    <string name="msg_yanzheng_code_msg_send">验证码短信已下发，请稍后</string>
    <string name="msg_yanzheng_code_msg_has_registered">该手机号码已经注册，可以直接登录或是找回密码.</string>
    <string name="msg_input_yanzheng_code_error">验证码输入有误，请重新输入</string>
    <string name="msg_input_usr_name">请输入姓名</string>
    <string name="msg_input_usr_pro">请输入省份</string>
    <string name="msg_input_usr_city">请输入城市</string>
    <string name="msg_input_usr_dis">请输入地区</string>
    <string name="msg_input_usr_place_detail">请输入你的详细地址</string>
    <string name="msg_input_usr_pwd">请输入密码</string>
    <string name="msg_input_pwd_not_match_tips">两次密码输入不一致，请重新输入</string>
    <string name="msg_usr_pwd_too_short_tips">密码不能小于6位</string>
    <string name="title_feedback">评价</string>
    <string name="baoxiucard_validity">%s天</string>
    <string name="baoxiucard_validity_toomuch">"9999天"</string>
    <string name="baoxiucard_outdate">过保</string>
    <string name="menu_new_card">新建保修卡</string>
     <string name="button_rescan">重新扫描</string>
     <string name="button_scan_exit">退出扫描</string>
     <string name="button_scan_finish_return_result">下一步</string>
     <string name="msg_scan_finish_return_result_no_network">在返回之前会向服务器查询产品信息，请检查网络是否可用</string>
    <string name="menu_new_repair">预约维修</string>
    <string name="menu_new_install">预约安装</string>
     <string name="menu_manage_home">管理家</string>
     <string name="activity_title_new_home">新建家</string>
     <string name="activity_title_update_home">更新家</string>
     <string name="title_scan_history">扫描历史</string>
     <string name="msg_can_not_access_network">抱歉，暂时无法访问服务器，请检查网络，稍后重试</string>
     <string name="msg_download_xinghao_wait">正在下载型号数据，请稍等...</string>
     <string name="msg_download_xinghao_error">下载型号数据失败,请稍后重试...</string>
     <string name="msg_download_xinghao_oom_error">型号数据太大,不能正常解析,请稍后重试...</string>
     <string name="msg_download_no_xinghao_wait">服务器还暂时没有该品牌的产品</string>
     <string name="title_dalei">大类</string>
      <string name="button_update">更新</string>
         <string name="button_home">"官网"</string>
          <string name="button_introduce">"功能介绍"</string>
         <string name="msg_app_has_latest">"已是最新版本"</string>
         <string name="msg_current_device_token_null">"设备Token(未注册)"</string>
         <string name="hint_input_old_password">请输入你的当前密码</string>
         <string name="hint_input_new_password">请输入你的新密码</string>
         <string name="hint_reinput_new_password">请再次输入你的新密码</string>
     <string name="password_accept_chars">"0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
      <string name="product_deadline">距离质保结束</string>
</resources>