<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/title_logo"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_title_logo_height"
        android:scaleType="center"
        android:background="#ffff7872"
        android:src="@drawable/top_login_icon" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:layout_weight="1.0"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
			        style="@style/ProductInfo"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/usr_name"
                    style="@style/ProductInfoInput"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/ProductInfo"
                    android:text="@string/usr_pwd" />

                <EditText
                    android:id="@+id/usr_pwd"
                    style="@style/ProductInfoInput"
                    android:digits="@string/password_accept_chars"
                    android:inputType="textPassword"
                    android:hint="@string/usr_pwd_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/ProductInfo"
                    android:text="@string/usr_repwd" />

                <EditText
                    android:id="@+id/usr_repwd"
                    style="@style/ProductInfoInput"
                    android:digits="@string/password_accept_chars"
                    android:inputType="textPassword"
                    android:hint="@string/usr_repwd_hint" />
            </LinearLayout>
            <EditText
                android:id="@+id/tag"
                android:text="@string/my_home"
                style="@style/ProductInfoInput"/>
		    <include layout="@layout/pcd_edit_layout" />
			
			
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/input_home_place_detail_tips" />

            <Button
                android:id="@+id/button_save_reg"
                android:layout_width="156dip"
                android:layout_height="42dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dip"
                android:background="@drawable/default_black_btn"
                android:gravity="center"
                android:text="@string/button_register_confirm"
                android:textColor="#ffffffff"
                android:layout_marginTop="20dip"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>