<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffe4e3e3"
    android:orientation="vertical" >
    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/blk"
        android:layout_marginTop="4dip"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/app_name_2014"/>
    <TextView android:id="@+id/app_version_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#ff366d94"
        android:layout_marginTop="4dip"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"/>
    <TextView android:id="@+id/app_db_version_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#ff366d94"
        android:layout_marginTop="4dip"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"/>
    <TextView android:id="@+id/app_device_token"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/light_black"
        android:layout_marginTop="4dip"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:text="@string/msg_current_device_token_null"/>
    <LinearLayout android:id="@+id/button_update"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@android:drawable/btn_default"
	    android:gravity="center_vertical"
	    android:layout_marginTop="10dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:clickable="true">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/blk"
            android:textSize="20sp"
            android:text="@string/button_update"
            android:layout_marginRight="8dip"
            android:layout_marginLeft="2dip"/>
        <TextView android:id="@+id/desc_update"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:textColor="@color/blk"
            android:textSize="16sp"
            android:gravity="right"
            android:text="@string/msg_app_has_latest"/>
  	</LinearLayout>
  	
    <Button android:id="@+id/button_introduce"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_vertical"
	    android:layout_marginTop="4dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:textColor="@color/blk"
        android:textSize="20sp"
        android:text="@string/button_introduce"/>
    <Button android:id="@+id/button_help"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_vertical"
	    android:layout_marginTop="4dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:textColor="@color/blk"
        android:textSize="20sp"
        android:text="@string/menu_help"/>
    <Button android:id="@+id/button_home"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_vertical"
	    android:layout_marginTop="4dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:textColor="@color/blk"
        android:textSize="20sp"
        android:text="@string/button_home"/>
</LinearLayout>
