<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dip"
    android:orientation="vertical" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" >
	    <TextView style="@style/ProductInfo"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/hint_input_old_password"/>
	    <EditText android:id="@+id/title"
	        android:inputType="textPassword"
	        android:digits="@string/password_accept_chars"
	        style="@style/ProductInfoInput"/>
	</LinearLayout>
	
     <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" >
	    <TextView style="@style/ProductInfo"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/hint_input_new_password"/>
	    <EditText android:id="@+id/title1"
	        android:inputType="textPassword"
	        android:digits="@string/password_accept_chars"
	        style="@style/ProductInfoInput"/>
	</LinearLayout>
	
      <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" >
	    <TextView style="@style/ProductInfo"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/hint_reinput_new_password"/>
	    <EditText android:id="@+id/title2"
	        android:inputType="textPassword"
	        android:digits="@string/password_accept_chars"
	        style="@style/ProductInfoInput"/>
	</LinearLayout>
	
</LinearLayout>
